edit explaination api
